# shell-lab

./: .gitignore  .jobs.cc.swp  .jobs.h.swp  .tsh.cc.swp  1  @  CMakeLists.txt  Makefile  jobs.cc  jobs.h  myint  myspin  mysplit  mystop  rtest11a.txt  rtss13.txt  test11a.txt  tsh  tsh.cc  tss13.txt
